<resources xmlns:tools="http://schemas.android.com/tools">
    <string-array name="titleType">
        <item>Mr.</item>
        <item>Mrs.</item>
        <item>Ms.</item>
    </string-array>
    <string name="error_internet">Internet connection cannot be established. Please ensure your device have internet access and try again.</string>
    <string name="error_server">Cannot establish connection with the server. Please try again later.</string>
    <string name="to_continue_text">to continue</string>
    <string name="error_fatal">An error has been encountered while processing your request! Please try again later.</string>
    <string name="text_login_in">Log in</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="permission_camera">This app needs camera permission to scan barcode</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="grant">GRANT</string>
    <string name="device_not_support_crop">Whoops - your device doesn\'t support the crop action!</string>
    <string name="ask_sending_amount">Enter Sending Amount</string>
    <string name="loading">Loading…</string>
    <string name="flash_not">Your device does not support flash</string>
    <string name="scan_correct_qr">Please scan the correct QR Code</string>
    <string name="scan_result">Scan result</string>
    <string name="nothing_found_try">No image found. Please try again</string>
    <string name="done">Done</string>
    <string name="nothing_found_text">Nothing found</string>
    <string name="wrong_qr_code">Wrong barcode/QR format</string>
    <string name="otp_sent">OTP has been sent to your mobile number.\n Please verify</string>
    <string name="dont_receive_otp">Don\'t receive the OTP or expired?</string>
    <string name="expired_otp">Resend OTP</string>
    <string name="app_name">Angootha pe</string>
    <string name="already_have_an_account">Not an existing customer?</string>
    <string name="sign_in">Sign In</string>
    <string name="skip">Skip</string>
    <string name="back">Back</string>
    <string name="verify">Verify &amp; Proceed</string>
    <string name="forgot_pin">Forgot Password?</string>
    <string name="first_name">First Name*</string>
    <string name="member_first_name">First Name</string>
    <string name="hint_member_first_name">First Name</string>
    <string name="hint_sms_rle_branch_code">SMS or RLE Branch Code</string>
    <string name="hint_sms_or_rle_lg_code">SMS or RLE LG Code</string>
    <string name="hint_dsa_code">DSA Code</string>
    <string name="hint_branch_code">Branch Code</string>
    <string name="hint_branch_lg_code">Branch LG Code</string>
    <string name="hint_transaction_no">Transaction No</string>
    <string name="hint_ref_no">Account or Reference or Relationship No</string>
    <string name="hint_application_no">Application Number</string>
    <string name="sum_assured">Sum Assured</string>
    <string name="no_of_hospital_cash_benefit">No of Hospital Cash Benefit during term of the policy</string>
    <string name="hospital_cash_benefit">Hospital Cash Benefit</string>
    <string name="Premium_Payment_Frequency">Premium Payment Frequency</string>
    <string name="Instalment_Premium">Instalment Premium</string>
    <string name="premium_amount_with_gst">Premium Amount with GST</string>
    <string name="good_health_declaration">Good Health Declaration</string>
    <string name="covid_questionnaire">Covid Questionnaire</string>
    <string name="terms_condition">Terms &amp; Condition</string>
    <string name="otp_consent">OTP Consent*</string>
    <string name="title">Title</string>
    <string name="asterisk">*</string>
    <string name="nominee_salutation">Salutation (Nominee)</string>
    <string name="office_address_1">Office Address 1* \n(Only Alpha numeric and Comma, Full stop, Space are allowed)</string>
    <string name="office_address_2">Office Address 2* \n(Only Alpha numeric and Comma, Full stop, Space are allowed)</string>
    <string name="landmark_office">Office LandMark*</string>
    <string name="company_name">Company Name*</string>
    <string name="working_since">Working Since*</string>
    <string name="co">CO*</string>
    <string name="Please_Enter_email_mobile_number">Please enter E-mail or Mobile number</string>
    <string name="Please_select_agents">Please select available agent</string>
    <string name="address">Address*</string>
    <string name="email">E-mail*</string>
    <string name="emailId">Email Id</string>
    <string name="nominee_name">Nominee Name</string>
    <string name="Percentage_Share">Percentage Share</string>
    <string name="Appointee_Name">Appointee Name</string>
    <string name="Source">Source</string>
    <string name="mph_name">MPH Name</string>
    <string name="Product_Type">Product Type</string>
    <string name="dogh_flag">DOGH Flag</string>
    <string name="otp_consent_flag">OTP Consent Flag</string>
    <string name="nominee_middle_name">Nominee Middle Name</string>
    <string name="nominee_last_name">Nominee Last Name</string>
    <string name="gender">Gender</string>
    <string name="Relationship_with_Nominee">Relationship with Nominee</string>
    <string name="Relationship_with_Member">Relationship with Member</string>
    <string name="male">Male</string>
    <string name="married">Married</string>
    <string name="unmarried">Single</string>
    <string name="female">Female</string>
    <string name="customer_registration">Customer Registration</string>
    <string name="registration">Registration</string>
    <string name="check_customer_status">Check Customer Status</string>
    <string name="upload_documents">Upload Documents</string>
    <string name="kyc">KYC</string>
    <string name="quick_pay">Quick Pay</string>
    <string name="beneficiary">Beneficiary</string>
    <string name="history">History</string>
    <string name="bank_name">Bank name*</string>
    <string name="bank_account_number">Account number*</string>
    <string name="ifsc_code">IFSC Code/IBAN No*</string>
    <string name="id_issue_date">ID issue date</string>
    <string name="id_expirey_date">ID expiry date*</string>
    <string name="change_pin">Change Password</string>
    <string name="wallet">Wallet</string>
    <string name="mobile_number">Mobile Number*</string>
    <string name="sign_up">Sign Up</string>
    <string name="payment_done">Payment done</string>
    <string name="loyalty_program">Loyalty Program</string>
    <string name="more">More</string>
    <string name="select_country">Select country</string>
    <string name="city">City*</string>
    <string name="pay_qr_code">Pay via QR code</string>
    <string name="enter_the_amount">Enter the amount you wish to load</string>
    <string name="to_demo">To demo company \n 531264645</string>
    <string name="about_us">About Us</string>
    <string name="no_internet">Oops.. no internet connection available</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="add_beneficiary">Add Beneficiary</string>
    <string name="send_now">Send now</string>
    <string name="enter_pin">Enter Password</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="pay_bill">Pay Bill</string>
    <string name="proceed_to_pay">Proceed to pay</string>
    <string name="middle_name">Middle name</string>
    <string name="nationality">Nationality</string>
    <string name="purpose_of_transfer">Purpose of transfer</string>
    <string name="bank_code">Bank code</string>
    <string name="id_type">ID type</string>
    <string name="source_income">Source of income</string>
    <string name="availiable_agents">Available agents</string>
    <string name="country">Country</string>
    <string name="customer_details">Customer Details</string>
    <string name="customer_code_or_crm">Customer <Cod></Cod>e</string>
    <string name="sending_amount">Sending amount</string>
    <string name="exchange_rate">Exchange rate</string>
    <string name="id_number">ID number</string>
    <string name="_91">+91</string>
    <string name="todo">TODO</string>
    <string name="view_reciept">View Receipt</string>
    <string name="total_payable">Total payable</string>
    <string name="receiving_amount">Receiving amount</string>
    <string name="text_Referral">Referral code</string>
    <string name="or">Or</string>
    <string name="card_no">Card number</string>
    <string name="resend_otp">Resend</string>
    <string name="transaction_details">Transaction Details</string>
    <string name="txn_number">TXN number</string>
    <string name="date_amp_time"><![CDATA[Date & Time]]></string>
    <string name="payment_details">Payment Details</string>
    <string name="sending_currency">Sending currency</string>
    <string name="service_fee">Service fee</string>
    <string name="other_charge">Other charge</string>
    <string name="vat_10_00">VAT/TAX</string>
    <string name="bank_details">Bank Details</string>
    <string name="branch">Branch</string>
    <string name="name">Name*</string>
    <string name="id_expiry">ID expiry</string>
    <string name="select_date_txt">Select date</string>
    <string name="address__hint">Oxford street </string>
    <string name="phone_number_hint">2012185234</string>
    <string name="name_hint">John Smith</string>
    <string name="service_provider">Service provider</string>
    <string name="company_name_legal_">Company legal name*</string>
    <string name="company_name_">Company name</string>
    <string name="company_brand_name">Company brand name*</string>
    <string name="pan_code_hint">Pan</string>
    <string name="company_pan_">Company pan*</string>
    <string name="company_pin_code">Company pin code*</string>
    <string name="select_pin_code">Select pin code</string>
    <string name="company_business_type">Company business type*</string>
    <string name="select_business_type">Select business type</string>
    <string name="company_esti_year">Company established year*</string>
    <string name="company_business_nature">Company business nature*</string>
    <string name="busines_nature_hint">Grocery Store</string>
    <string name="company_contact_name">Company contact name*</string>
    <string name="company_contact_mobile">Company contact number*</string>
    <string name="company_contact_email">Compant contact email*</string>
    <string name="hint_email">ag@gmail.com</string>
    <string name="enter_company_details">Please enter company details</string>
    <string name="merchant_pin_code_">Merchant Pincode*</string>
    <string name="accept_inter_card">Accept international card*</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="location_hint_">e-g Delhi Gate India</string>
    <string name="merchant_address_">Merchant address*</string>
    <string name="locality_">Merchant Locality*</string>
    <string name="punjab_txt">e-g Punjab</string>
    <string name="merchant_city_txt">Merchant city*</string>
    <string name="merchant_terminal_type">Merchant terminal Type*</string>
    <string name="device_model_txt">Device model*</string>
    <string name="device_owned_txt">Device owned*</string>
    <string name="mercant_txt">Merchant</string>
    <string name="add_terminal_txt">Add Terminal</string>
    <string name="enter_below_details">Please enter below details</string>
    <string name="select_device_txt">Select device</string>
    <string name="company_regi_no_">Company registration no*</string>
    <string name="company_regi_no_hint">000000000</string>
    <string name="serial_no_txt">Serial No*</string>
    <string name="activite_terminal">Activate</string>
    <string name="enter_terminal_details">Enter terminal details</string>
</resources>