<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin_20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_bold"
                android:text="@string/enter_company_details"
                android:textColor="@color/blakish"
                android:textSize="@dimen/text_size_20sp" />

            <TextView
                style="@style/TitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/company_name_legal_" />


            <EditText
                android:singleLine="true"

                android:id="@+id/legal_name"
                style="@style/EditTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_45dp"
                android:layout_marginTop="@dimen/_5sdp"
                android:hint="@string/company_name_"
                android:inputType="text"
                android:padding="@dimen/margin_10dp" />

            <TextView
                style="@style/TitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/company_regi_no_" />


            <EditText
                android:singleLine="true"

                android:id="@+id/reg_no"
                style="@style/EditTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_45dp"
                android:layout_marginTop="@dimen/_5sdp"
                android:hint="@string/company_regi_no_hint"
                android:inputType="text"
                android:padding="@dimen/margin_10dp" />

            <TextView
                style="@style/TitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp"
                android:text="@string/company_brand_name" />


            <EditText
                android:singleLine="true"
                android:id="@+id/brand_name"
                style="@style/EditTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_45dp"
                android:layout_marginTop="@dimen/margin_5dp"
                android:hint="@string/address__hint"
                android:inputType="textPostalAddress"
                android:padding="@dimen/margin_10dp" />

            <TextView
                style="@style/TitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp"
                android:text="@string/address" />


            <EditText
                android:singleLine="true"
                android:id="@+id/address"
                style="@style/EditTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_45dp"
                android:layout_marginTop="@dimen/margin_5dp"
                android:hint="@string/address__hint"
                android:inputType="textPostalAddress"
                android:padding="@dimen/margin_10dp" />


            <TextView
                style="@style/TitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp"
                android:text="@string/company_pan_" />


            <EditText
                android:singleLine="true"
                android:id="@+id/pan"
                style="@style/EditTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_45dp"
                android:layout_marginTop="@dimen/margin_5dp"
                android:hint="@string/pan_code_hint"
                android:padding="@dimen/margin_10dp" />

            <TextView
                style="@style/TitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp"
                android:text="@string/company_pin_code" />


            <TextView
                android:id="@+id/pin_code"
                style="@style/EditTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_45dp"
                android:layout_marginTop="@dimen/margin_5dp"
                android:drawableEnd="@drawable/dropdown_arrow"
                android:hint="@string/select_pin_code"
                android:padding="@dimen/margin_10dp" />

            <TextView
                style="@style/TitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp"
                android:text="@string/company_business_type" />


            <TextView
                android:id="@+id/business_type"
                style="@style/EditTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_45dp"
                android:layout_marginTop="@dimen/margin_5dp"
                android:clickable="true"
                android:drawableEnd="@drawable/dropdown_arrow"
                android:hint="@string/select_business_type"
                android:padding="@dimen/margin_10dp" />

            <TextView
                style="@style/TitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp"
                android:text="@string/company_esti_year" />


            <TextView
                android:id="@+id/company_since"
                style="@style/EditTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_45dp"
                android:layout_marginTop="@dimen/margin_5dp"
                android:drawableEnd="@drawable/ic_calendar"
                android:hint="@string/select_date_txt"
                android:padding="@dimen/margin_10dp" />


            <TextView
                style="@style/TitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp"
                android:fontFamily="@font/lato_medium"
                android:text="@string/company_business_nature" />


            <EditText
                android:singleLine="true"
                android:id="@+id/business_nature"
                style="@style/EditTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_45dp"
                android:layout_marginTop="@dimen/margin_5dp"
                android:hint="@string/busines_nature_hint"
                android:padding="10dp" />


            <TextView
                style="@style/TitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp"
                android:fontFamily="@font/lato_medium"
                android:text="@string/company_contact_name" />


            <EditText
                android:singleLine="true"
                android:id="@+id/company_contact_name"
                style="@style/EditTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_45dp"
                android:layout_marginTop="@dimen/margin_5dp"
                android:hint="@string/name_hint"
                android:padding="10dp" />

            <TextView
                style="@style/TitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp"
                android:fontFamily="@font/lato_medium"
                android:text="@string/company_contact_mobile" />


            <EditText
                android:singleLine="true"
                android:id="@+id/company_contact_number"
                style="@style/EditTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_45dp"
                android:layout_marginTop="@dimen/margin_5dp"
                android:hint="@string/phone_number_hint"
                android:inputType="phone"
                android:padding="10dp" />

            <TextView
                style="@style/TitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp"
                android:fontFamily="@font/lato_medium"
                android:text="@string/company_contact_email" />


            <EditText
                android:singleLine="true"
                android:id="@+id/company_contact_email"
                style="@style/EditTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_45dp"
                android:layout_marginTop="@dimen/margin_5dp"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:padding="10dp" />

            <TextView
                style="@style/TitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/accept_inter_card"
                android:textSize="@dimen/text_size_14sp" />

            <RadioGroup
                android:id="@+id/radioGroup"
                style="@style/EditTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_45dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:checkedButton="@id/maleRadioButtonProfile"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/yes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:paddingLeft="@dimen/_5sdp"
                    android:text="@string/yes"
                    android:textSize="@dimen/_12ssp" />

                <RadioButton
                    android:id="@+id/no"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="@dimen/_5sdp"
                    android:text="@string/no"
                    android:textSize="@dimen/_12ssp" />
            </RadioGroup>

            <Button
                android:id="@+id/next_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_margin="@dimen/margin_20dp"
                android:background="@drawable/button_design"
                android:text="@string/next"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_18sp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</layout>