<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin_20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_bold"
                android:text="@string/enter_terminal_details"
                android:textColor="@color/blakish"
                android:textSize="@dimen/text_size_20sp" />


            <TextView
                style="@style/TitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp"
                android:fontFamily="@font/lato_medium"
                android:text="@string/device_model_txt" />

            <TextView
                android:id="@+id/merchant_terminal"
                style="@style/EditTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_45dp"
                android:layout_marginTop="@dimen/margin_5dp"
                android:hint="@string/select_device_txt"
                android:padding="@dimen/margin_10dp"
                app:drawableEndCompat="@drawable/dropdown_arrow" />

            <TextView
                style="@style/TitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/serial_no_txt" />


            <EditText
                android:id="@+id/serial_no"
                style="@style/EditTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_45dp"
                android:layout_marginTop="@dimen/_5sdp"
                android:hint="@string/company_regi_no_hint"
                android:inputType="text"
                android:padding="@dimen/margin_10dp"
                android:singleLine="true" />

            <Button
                android:id="@+id/next_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="@dimen/margin_20dp"
                android:background="@drawable/button_design"
                android:text="@string/activite_terminal"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_18sp" />


            <ProgressBar
                android:visibility="gone"
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_20dp" />


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</layout>